crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD002_fail.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
---
<filename>:4:23: PD002 [*] `inplace=True` should be avoided; it has inconsistent behavior
  |
4 | import pandas as pd
5 | x = pd.DataFrame()
6 | x.drop(["a"], axis=1, inplace=True)
  |                       ^^^^^^^^^^^^ PD002
  |
  = help: Assign to variable; remove `inplace` arg

ℹ Suggested fix
1 1 | 
2 2 | import pandas as pd
3 3 | x = pd.DataFrame()
4   |-x.drop(["a"], axis=1, inplace=True)
  4 |+x = x.drop(["a"], axis=1)


