crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD003_fail.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
---
<filename>:3:9: PD003 `.isna` is preferred to `.isnull`; functionality is equivalent
  |
3 | import pandas as pd
4 | nulls = pd.isnull(val)
  |         ^^^^^^^^^ PD003
  |


