crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD003_fixes.py.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
expression: diagnostics
---
- kind:
    UseOfDotIsNull: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 9
  fix:
    content:
      - df.isna
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 9
  parent: ~

