crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD004_fail.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
---
<filename>:3:13: PD004 `.notna` is preferred to `.notnull`; functionality is equivalent
  |
3 | import pandas as pd
4 | not_nulls = pd.notnull(val)
  |             ^^^^^^^^^^ PD004
  |


