crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD004_fixes.py.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
expression: diagnostics
---
- kind:
    UseOfDotNotNull: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 10
  fix:
    content:
      - df.notna
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 10
  parent: ~

