crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD008_fail.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
---
<filename>:4:9: PD008 Use `.loc` instead of `.at`. If speed is important, use NumPy.
  |
4 | import pandas as pd
5 | x = pd.DataFrame()
6 | index = x.at[:, ["B", "A"]]
  |         ^^^^^^^^^^^^^^^^^^^ PD008
  |


