crates/ruff/src/rules/pandas_vet/snapshots/ruff__rules__pandas_vet__tests__PD009_fail.snap
---
source: crates/ruff/src/rules/pandas_vet/mod.rs
---
<filename>:4:9: PD009 Use `.iloc` instead of `.iat`. If speed is important, use NumPy.
  |
4 | import pandas as pd
5 | x = pd.DataFrame()
6 | index = x.iat[:, 1:3]
  |         ^^^^^^^^^^^^^ PD009
  |


